--- a/app/src/main/res/layout/item_tag_layout.xml
+++ b/app/src/main/res/layout/item_tag_layout.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/tagNameTv"
+<androidx.appcompat.widget.AppCompatTextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tv_tag_name"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/len_6"
     android:layout_marginLeft="@dimen/len_6"
     android:layout_marginTop="@dimen/len_6"
     android:background="@drawable/tag_bg"
@@ -10,8 +11,8 @@
     android:orientation="vertical"
     android:paddingLeft="@dimen/len_8"
     android:paddingTop="@dimen/len_2"
-    android:textColor="@color/colorPrimary"
     android:paddingRight="@dimen/len_8"
     android:paddingBottom="@dimen/len_2"
-    android:text="测试" />
+    android:text="测试"
+    android:textColor="@color/colorPrimary" />
 
