--- a/common/src/main/res/layout/tablayout.xml
+++ b/common/src/main/res/layout/tablayout.xml
@@ -7,7 +7,7 @@
     >
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabLayout"
+        android:id="@+id/tab_layout"
         style="@style/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
