--- a/app/src/main/res/layout/activity_drop_down_menu.xml
+++ b/app/src/main/res/layout/activity_drop_down_menu.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".ui.DropDownMenuActivity">
 
-    <include layout="@layout/toolbar"/>
+    <include layout="@layout/toolbar" />
 
 
     <com.yzq.widget.drop_down_menu.DropDownMenu
-        android:id="@+id/dropdownMenu"
+        android:id="@+id/dropdown_menu"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -22,13 +22,7 @@
         app:menuTextSize="@dimen/font_14"
         app:menuUnselectedIcon="@drawable/ic_arrow_down"
         app:textSelectedColor="@color/colorAccent"
-        app:textUnselectedColor="@color/black">
-        
-
-
-    </com.yzq.widget.drop_down_menu.DropDownMenu>
-
-
+        app:textUnselectedColor="@color/black" />
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
