--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -7,19 +7,18 @@
     tools:context=".ui.ImageActivity">
 
 
-    <include layout="@layout/toolbar"/>
+    <include layout="@layout/toolbar" />
 
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/imgIv"
+        android:id="@+id/iv_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        />
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/imgFab"
+        android:id="@+id/fab_camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
