--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -6,21 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".ui.NewsActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <include layout="@layout/toolbar" />
+
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        tools:context=".ui.NewsActivity"
+        tools:showIn="@layout/activity_news">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recy"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="match_parent">
 
-    </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_news" />
+        </androidx.recyclerview.widget.RecyclerView>
+
+
+        <com.yzq.common.widget.StateView
+            android:id="@+id/state_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+
+
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
