--- a/app/src/main/res/layout/drop_down_menu_content.xml
+++ b/app/src/main/res/layout/drop_down_menu_content.xml
@@ -6,8 +6,8 @@
     android:orientation="vertical">
 
 
-    <TextView
-        android:id="@+id/filterTv"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_filter"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
