--- a/app/src/main/res/layout/item_delete_menu.xml
+++ b/app/src/main/res/layout/item_delete_menu.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.AppCompatTextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tv_delete"
     android:layout_width="@dimen/len_68"
     android:layout_height="match_parent"
     android:background="@color/red_500"
     android:gravity="center"
-    android:id="@+id/deleteMenu"
     android:orientation="vertical"
     android:text="删除"
-    android:textColor="@color/white">
-
-</TextView>
+    android:textColor="@color/white" />
