--- a/app/src/main/res/layout/item_news_layout.xml
+++ b/app/src/main/res/layout/item_news_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/len_76"
     android:background="@drawable/list_item_selector"
@@ -8,17 +8,17 @@
 
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/imgIv"
+        android:id="@+id/iv_img"
         android:layout_gravity="center_vertical"
         android:layout_width="@dimen/len_76"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/titleTv"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:padding="@dimen/len_10"
         android:textColor="@color/black" />
 
-</LinearLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
