--- a/common/src/main/res/drawable-v21/list_item_selector.xml
+++ b/common/src/main/res/drawable-v21/list_item_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="@color/wave_color">
-    <item android:drawable="@color/white"></item>
+    <item android:drawable="@color/white"/>
 </ripple>
