--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -66,16 +66,19 @@
     </style>
 
     <!--Button-->
-    <style name="button" parent="Widget.MaterialComponents.Button">
-
-
-
-    </style>
-
-
-    <style name="outline_button" parent="Widget.MaterialComponents.Button.OutlinedButton">
+    <style name="button" parent="Widget.MaterialComponents.Button" >
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/colorAccent</item>
 
 
     </style>
+
+
+    <!--outline button-->
+    <style name="outlineButton" parent="Widget.MaterialComponents.Button.OutlinedButton" />
+
+    <!--text button-->
+    <style name="textButton" parent="Widget.MaterialComponents.Button.TextButton" />
+
 
 </resources>
