--- a/custom_view/src/main/res/layout/item_sample_dropdown_menu.xml
+++ b/custom_view/src/main/res/layout/item_sample_dropdown_menu.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/list_item_selector"
     android:padding="10dp">
 
 
-    <TextView
-        android:id="@+id/contentTv"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
@@ -15,4 +15,4 @@
 
         android:text="asdsadsa" />
 
-</LinearLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
