--- a/custom_view/src/main/res/layout/layout_tab_item.xml
+++ b/custom_view/src/main/res/layout/layout_tab_item.xml
@@ -5,14 +5,14 @@
     android:layout_height="45dp">
 
 
-    <LinearLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tabTitleTv"
+            android:id="@+id/tv_tab_title"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
@@ -21,7 +21,7 @@
 
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/tabIconIv"
+            android:id="@+id/iv_tab_icon"
             android:layout_width="12dp"
             android:layout_height="12dp"
             android:layout_gravity="center_vertical"
@@ -31,6 +31,6 @@
             />
 
 
-    </LinearLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </RelativeLayout>
