--- a/app/src/main/res/layout/activity_gao_de.xml
+++ b/app/src/main/res/layout/activity_gao_de.xml
@@ -14,6 +14,7 @@
         style="@style/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/len_10"
         android:text="获取当前位置" />
 
 
