--- a/app/src/main/res/layout/activity_zxing.xml
+++ b/app/src/main/res/layout/activity_zxing.xml
@@ -18,6 +18,7 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_scan"
         style="@style/button"
+        android:layout_margin="@dimen/len_10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="扫描二维码" />
@@ -26,6 +27,7 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_jsoup"
         style="@style/button"
+        android:layout_margin="@dimen/len_10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="扫描提取营业执照信息" />
