--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -38,11 +38,11 @@
 
     <!--toolbar样式-->
     <style name="ToolbarTheme" parent="@style/ThemeOverlay.MaterialComponents.Light">
-        <item name="android:textColorSecondary">@color/white</item>
-        <item name="android:colorBackground">@color/white</item>
-        <!--<item name="actionOverflowMenuStyle">@style/OverflowMenuStyle</item>-->
-        <item name="colorControlNormal">@color/white</item>
-        <item name="android:textColorPrimary">@color/white</item>
+        <!--<item name="android:textColorSecondary">@color/white</item>-->
+        <!--<item name="android:colorBackground">@color/white</item>-->
+        <item name="actionOverflowMenuStyle">@style/OverflowMenuStyle</item>
+        <!--<item name="colorControlNormal">@color/white</item>-->
+        <!--<item name="android:textColorPrimary">@color/white</item>-->
 
     </style>
 
@@ -66,7 +66,7 @@
     </style>
 
     <!--Button-->
-    <style name="button" parent="Widget.MaterialComponents.Button" >
+    <style name="button" parent="Widget.MaterialComponents.Button">
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@color/colorAccent</item>
 
