--- a/app/src/main/res/layout/item_news_layout.xml
+++ b/app/src/main/res/layout/item_news_layout.xml
@@ -9,9 +9,9 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_img"
-        android:layout_gravity="center_vertical"
         android:layout_width="@dimen/len_76"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_title"
