--- a/common/src/main/res/layout/activity_img_preview.xml
+++ b/common/src/main/res/layout/activity_img_preview.xml
@@ -27,9 +27,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_collapseMode="pin"
-            app:layout_scrollFlags="enterAlways">
+            app:layout_scrollFlags="enterAlways" />
 
-        </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
 
