--- a/common/src/main/res/layout/toolbar.xml
+++ b/common/src/main/res/layout/toolbar.xml
@@ -1,15 +1,14 @@
 <com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/AppBar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/linear_gradient_color"
     android:theme="@style/AppTheme.AppBarOverlay">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@drawable/side_nav_bar"
         app:layout_collapseMode="pin"
         app:popupTheme="@style/AppTheme.PopupOverlay" />
 
