--- a/app/src/main/res/layout/appbar_main.xml
+++ b/app/src/main/res/layout/appbar_main.xml
@@ -26,11 +26,11 @@
 
 
             <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/iv_appbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
-
                 app:layout_collapseParallaxMultiplier="0.3"
                 app:srcCompat="@drawable/materialdesign_introduction" />
 
