--- a/common/src/main/res/layout/loading_dialog_layout.xml
+++ b/common/src/main/res/layout/loading_dialog_layout.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content" />
 
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/loadding_message_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
