--- a/common/src/main/res/layout/progress_dialog_layout.xml
+++ b/common/src/main/res/layout/progress_dialog_layout.xml
@@ -27,7 +27,7 @@
             android:id="@+id/current_progress_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0"
+            android:text="@string/zero"
             android:textColor="?android:textColorSecondary"
             android:textSize="@dimen/font_16"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -37,7 +37,7 @@
             android:id="@+id/total_progress_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="100"
+            android:text="@string/hundred"
             android:textColor="?android:textColorSecondary"
             android:textSize="@dimen/font_16"
             app:layout_constraintRight_toRightOf="parent"
