优化瀑布流图片加载性能

--- a/app/src/main/res/layout/item_img_list.xml
+++ b/app/src/main/res/layout/item_img_list.xml
@@ -2,6 +2,7 @@
 <androidx.appcompat.widget.AppCompatImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/iv_img"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="@dimen/len_1" />
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/len_1"
+    android:scaleType="centerCrop" />
 
