--- a/gao_de_map/src/main/res/layout/activity_gao_de.xml
+++ b/gao_de_map/src/main/res/layout/activity_gao_de.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,20 +9,21 @@
 
     <include layout="@layout/toolbar" />
 
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_location"
         style="@style/Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/len_10"
-        android:text="获取当前位置" />
+        android:text="开始定位" />
 
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_location"
+        android:id="@+id/tv_location_result"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center"
-        android:minHeight="@dimen/len_48" />
+        android:hint="定位结果" />
 
-</LinearLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
