--- a/common/src/main/res/layout/toolbar.xml
+++ b/common/src/main/res/layout/toolbar.xml
@@ -1,5 +1,6 @@
 <com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout_appbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/linear_gradient_color"
