--- a/common/src/main/res/values/attr.xml
+++ b/common/src/main/res/values/attr.xml
@@ -9,6 +9,7 @@
         <attr name="horz_edit_content" format="string" />
         <attr name="horz_edit_endIcon" format="reference" />
         <attr name="horz_edit_editEnable" format="boolean" />
+        <attr name="horz_edit_hint" format="string" />
         <attr name="horz_edit_inputType" format="enum">
             <enum name="phone" value="0" />
             <enum name="number" value="1" />
