--- a/app/src/main/res/layout/item_main_layout.xml
+++ b/app/src/main/res/layout/item_main_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <com.yzq.common.widget.HorizontalTextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/mainItem"
     android:layout_width="match_parent"
     android:layout_height="@dimen/len_48" />
