规范资源文件中的属性，消除警告

--- a/common/src/main/res/layout/loading_dialog_layout.xml
+++ b/common/src/main/res/layout/loading_dialog_layout.xml
@@ -19,8 +19,9 @@
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
         android:textSize="@dimen/font_16"
-        android:paddingLeft="@dimen/len_10"
+        android:paddingStart="@dimen/len_10"
+        android:paddingEnd="@dimen/len_0"
         android:textColor="?android:textColorSecondary"
-        android:text="加载中..." />
+        android:text="@string/loadding" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
