--- a/common/src/main/res/layout/view_horizontal_edit_layout.xml
+++ b/common/src/main/res/layout/view_horizontal_edit_layout.xml
@@ -22,9 +22,8 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/len_10"
+        android:layout_marginStart="@dimen/len_10"
         android:minWidth="@dimen/len_100"
-        android:text="标题"
         android:textColor="@color/primary_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/icon_start"
@@ -37,8 +36,8 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:background="@null"
-        android:paddingLeft="@dimen/len_10"
-        android:text="内容"
+        android:paddingStart="@dimen/len_10"
+        android:paddingEnd="@dimen/len_0"
         android:textColor="@color/secondary_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/icon_end"
@@ -49,7 +48,8 @@
         android:id="@+id/icon_end"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/len_20"
-        android:paddingLeft="@dimen/len_10"
+        android:paddingStart="@dimen/len_10"
+        android:paddingEnd="@dimen/len_0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
