--- a/common/src/main/res/layout/layout_state_view.xml
+++ b/common/src/main/res/layout/layout_state_view.xml
@@ -19,7 +19,7 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
             android:gravity="center"
             android:text="@string/loadding" />
 
