--- a/common/src/main/res/layout/view_horizontal_text_layout.xml
+++ b/common/src/main/res/layout/view_horizontal_text_layout.xml
@@ -21,9 +21,8 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/len_10"
+        android:layout_marginStart="@dimen/len_10"
         android:minWidth="@dimen/len_100"
-        android:text="标题"
         android:textColor="@color/primary_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/icon_start"
@@ -35,9 +34,9 @@
         android:id="@+id/tv_content"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:gravity="right"
-        android:paddingLeft="@dimen/len_10"
-        android:text="内容"
+        android:gravity="end"
+        android:paddingStart="@dimen/len_10"
+        android:paddingEnd="@dimen/len_0"
         android:textColor="@color/secondary_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/icon_end"
@@ -48,7 +47,8 @@
         android:id="@+id/icon_end"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/len_20"
-        android:paddingLeft="@dimen/len_10"
+        android:paddingStart="@dimen/len_10"
+        android:paddingEnd="@dimen/len_0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
