1.图片预览时新增共享元素动画，视觉效果更好 2.去除无用代码

--- a/app/src/main/res/layout/item_img_list.xml
+++ b/app/src/main/res/layout/item_img_list.xml
@@ -4,5 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/len_1"
-    android:scaleType="centerCrop" />
+    android:scaleType="centerCrop"
+    />
 
