--- a/common/src/main/res/layout/activity_img_preview.xml
+++ b/common/src/main/res/layout/activity_img_preview.xml
@@ -12,6 +12,7 @@
         android:id="@+id/photo_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:transitionName="@string/img_transition"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
 
