简化图片加载扩展方法

--- a/app/src/main/res/layout/item_movie_layout.xml
+++ b/app/src/main/res/layout/item_movie_layout.xml
@@ -11,8 +11,7 @@
         android:id="@+id/iv_img"
         android:layout_width="@dimen/len_76"
         android:layout_height="match_parent"
-        android:layout_gravity="center_vertical"
-        android:scaleType="centerCrop" />
+        android:layout_gravity="center_vertical" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_title"
