--- a/app/src/main/res/layout/activity_autodispose.xml
+++ b/app/src/main/res/layout/activity_autodispose.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".ui.AutodisposeActivity">
+    tools:context=".ui.activity.AutodisposeActivity">
 
     <include layout="@layout/toolbar" />
 
