--- a/app/src/main/res/layout/activity_image_list.xml
+++ b/app/src/main/res/layout/activity_image_list.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".ui.ImageListActivity">
+    tools:context=".ui.activity.ImageListActivity">
 
 
     <include layout="@layout/toolbar" />
