--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.activity.MainActivity">
 
 
     <include layout="@layout/appbar_main" />
