--- a/app/src/main/res/layout/activity_zxing.xml
+++ b/app/src/main/res/layout/activity_zxing.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.ZxingActivity">
+    tools:context=".ui.activity.ZxingActivity">
 
     <include layout="@layout/toolbar" />
 
