--- a/app/src/main/res/layout/item_movie_layout.xml
+++ b/app/src/main/res/layout/item_movie_layout.xml
@@ -11,7 +11,8 @@
         android:id="@+id/iv_img"
         android:layout_width="@dimen/len_76"
         android:layout_height="match_parent"
-        android:layout_gravity="center_vertical" />
+        android:layout_gravity="center_vertical"
+        android:scaleType="centerCrop" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_title"
