--- a/lib_resource/src/main/res/values-v21/styles.xml
+++ b/lib_resource/src/main/res/values-v21/styles.xml
@@ -1,5 +1,6 @@
 <resources>
-    <style name="AppTheme.NoActionBar">
+
+    <style name="YzqAppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
