将widget先关的代码移至lib_widget，并删除custom_widget

--- a/app/src/main/res/layout/activity_image_list.xml
+++ b/app/src/main/res/layout/activity_image_list.xml
@@ -26,7 +26,7 @@
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
-    <com.yzq.common.widget.StateView
+    <com.yzq.lib_widget.StateView
         android:id="@+id/state_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
