--- a/app/src/main/res/layout/activity_drop_down_menu.xml
+++ b/app/src/main/res/layout/activity_drop_down_menu.xml
@@ -10,7 +10,7 @@
     <include layout="@layout/toolbar" />
 
 
-    <com.yzq.widget.drop_down_menu.DropDownMenu
+    <com.yzq.lib_widget.drop_down_menu.DropDownMenu
         android:id="@+id/dropdown_menu"
         android:layout_width="match_parent"
         android:layout_height="0dp"
