--- a/lib_resource/src/main/res/values/colors.xml
+++ b/lib_resource/src/main/res/values/colors.xml
@@ -2,9 +2,9 @@
 <resources>
 
 
-    <color name="colorPrimary">#2196F3</color>
-    <color name="colorPrimaryDark">#1976D2</color>
-    <color name="colorAccent">#03A9F4</color>
+    <color name="colorPrimary">#e84e40</color>
+    <color name="colorPrimaryDark">#f06292</color>
+    <color name="colorAccent">#ff5177</color>
     <color name="primary_light">#BBDEFB</color>
     <!--主要文字颜色-->
     <color name="primary_text">#212121</color>
