--- a/lib_widget/src/main/res/layout/layout_tab_item.xml
+++ b/lib_widget/src/main/res/layout/layout_tab_item.xml
@@ -25,10 +25,8 @@
             android:layout_width="12dp"
             android:layout_height="12dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="2dp"
-            app:srcCompat="@drawable/ic_arrow_down"
-
-            />
+            android:layout_marginStart="2dp"
+            app:srcCompat="@drawable/ic_arrow_down" />
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
