将Activity相关代码移动至lib_base,完善其他模块代码

--- a/lib_base/src/main/res/layout/activity_img_preview.xml
+++ b/lib_base/src/main/res/layout/activity_img_preview.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".ui.ImgPreviewActivity">
+    tools:context="com.yzq.lib_base.com.yzq.lib_img.ImgPreviewActivity">
 
 
     <com.github.chrisbanes.photoview.PhotoView
