--- a/app/src/main/res/layout/item_task_swipe_layout.xml
+++ b/app/src/main/res/layout/item_task_swipe_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.yzq.widget.swipe_menu.SwipeMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<com.yzq.lib_widget.swipe_menu.SwipeMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -13,4 +14,4 @@
     <include layout="@layout/item_delete_menu" />
 
 
-</com.yzq.widget.swipe_menu.SwipeMenuLayout>
+</com.yzq.lib_widget.swipe_menu.SwipeMenuLayout>
