--- a/app/src/main/res/layout/item_drop_down_menu_layout.xml
+++ b/app/src/main/res/layout/item_drop_down_menu_layout.xml
@@ -9,9 +9,9 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:padding="@dimen/len_10"
+        android:paddingLeft="@dimen/len_10"
         android:text="测试"
         android:textColor="@color/primary_text" />
 
